# easy-scaffold

./: CHANGELOG.md  README.md  pyproject.toml
configs/: main_documentdb.yaml
configs/blob/: s3.yaml
configs/db/: documentdb.yaml
configs/llm/: default.yaml
src/easy_scaffold/: cli.py
src/easy_scaffold/common/: env_bootstrap.py
src/easy_scaffold/configs/: pydantic_models.py
src/easy_scaffold/llm_client/: clients.py
src/easy_scaffold/llm_client/providers/: __init__.py  anthropic.py  errors.py  gemini.py  openai_compat.py  response.py  router.py  vision_utils.py
src/easy_scaffold/media/: __init__.py  attachments.py  blob_store.py  s3_blob_store.py  types.py
src/easy_scaffold/tools/: __init__.py  manager.py  sandbox.py
src/easy_scaffold/workflows/: configurable_stage.py
tests/common/: test_env_bootstrap.py
tests/llm_client/: test_anthropic_conversion.py  test_gemini_conversion.py  test_vision_utils.py
tutorials/: add_new_stage_tutorial.md  add_new_workflow_tutorial.md
